# OPENAI-Hackaton-pjt

./: .gitignore  CLAUDE.md  README.md  app.py  initial_plan.md  main.py  pyproject.toml
config/: pricing.json  prompts.py
modules/: email_parser.py  file_analyzer.py  pdf_generator.py  quote_calculator.py  sheets_connector.py
templates/: quote_template.py
tests/: test_quote_calculator.py
